# INIParser

./: CMakeLists.txt  ErrnoToCVIStatus.c  ErrnoToCVIStatus.h  INI.c  INI.h  INIFileParser.c  INIFileParser.h  INIFileParserTest.c  INIFileParserTest.h  INIParser.c  INIParser.cbp  INIParser.depend  INIParser.h  INIParser.layout  INIParserGettingValuesFromTags.c  INIParserGettingValuesFromTags.h  INIParserInformational.c  INIParserInformational.h  INIParserManagement.c  INIParserManagement.h  INIParserPuttingTagValuePairs.c  INIParserPuttingTagValuePairs.h  INIParserRemovingSectionsAndItems.c  INIParserRemovingSectionsAndItems.h  INIRecords.c  INIRecords.h  IniTest.ini  MyMalloc.c  MyMalloc.h  README.md  Sample.ini  Sample2.ini  Utilities.c  Utilities.h  main-old.c  main.c
